--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,31 @@
 *.opensdf
+*.tlog
+Lean/Debug/pch.obj
+Lean/Debug/WICTextureLoader.obj
+Lean/Debug/Texture.obj
+Lean/Debug/WICTextureLoader.obj
+Lean/Debug/DDSTextureLoader.obj
+Lean/Debug/Source.obj
+Lean/Debug/Level.obj
+*.idb
+*.pdb
+Lean/Debug/main.obj
+Lean/Debug/TextureClass.obj
+Lean/Debug/Sound.obj
+Lean/Debug/Shader.obj
+Lean/Debug/SystemClass.obj
+Lean/Debug/Menu.obj
+Lean/Debug/PhysicsBridge.obj
+Lean/Debug/Mesh.obj
+Lean/Debug/MathFuncs.obj
+Lean/Debug/Input.obj
+Lean/Debug/Lean.lastbuildstate
+Lean/Debug/LevelManager.obj
+Lean/Debug/Application.obj
+Lean/Debug/Ball.obj
+Lean/Debug/Camera.obj
+Lean/Debug/HString.obj
+Lean/Debug/Lean.log
+Lean/Debug/FPSClass.obj
+Lean/Debug/ApplicationTimer.obj
+Lean/Debug/D3D.obj
