--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ Lean/Debug/Lean.log
 Lean/Debug/FPSClass.obj
 Lean/Debug/ApplicationTimer.obj
 Lean/Debug/D3D.obj
+Lean/Debug/DCollision.obj
 Debug/Lean.exe
 Debug/Lean.ilk
 
