Lagt till LevelLoader i projektet och bytt till v3 för att matcha resten av projektet

--- a/Lean/Lean.vcxproj
+++ b/Lean/Lean.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="FPSClass.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="Level.cpp" />
+    <ClCompile Include="LevelLoaderClass.cpp" />
     <ClCompile Include="LevelManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menu.cpp" />
@@ -52,6 +53,7 @@
     <ClInclude Include="FPSClass.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Level.h" />
+    <ClInclude Include="LevelLoaderClass.h" />
     <ClInclude Include="LevelManager.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Mesh.h" />
