--- a/Lean/Lean.vcxproj.filters
+++ b/Lean/Lean.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="DuckRenderer\DCollision.cpp">
       <Filter>Source Files\DuckRenderer</Filter>
     </ClCompile>
+    <ClCompile Include="LevelLoaderClass.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SystemClass.h">
@@ -187,6 +190,9 @@
     </ClInclude>
     <ClInclude Include="DuckRenderer\DCollision.h">
       <Filter>Header Files\DuckRenderer</Filter>
+    </ClInclude>
+    <ClInclude Include="LevelLoaderClass.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
