Hade problem med github, men nu borde jag kunna pusha upp ändringarna. Av någon anledning verkar texturer inte kunna pushas upp

--- a/Lean/Lean.vcxproj
+++ b/Lean/Lean.vcxproj
@@ -85,6 +85,8 @@
     <None Include="fullScreenQuad.vs" />
     <None Include="level.ps" />
     <None Include="level.vs" />
+    <None Include="obstacle.ps" />
+    <None Include="obstacle.vs" />
     <None Include="pointLight.ps" />
     <None Include="pointLight.vs" />
   </ItemGroup>
